--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,38 @@
-/* :root{
-  --panel-bg-color: #dfe4ea;
-  --container-bg-color: #f1f2f6;
-  --text-color: #2f3542;
-}
-:root[theme='dark'] {
-  --panel-bg-color: #2f3542;
-  --container-bg-color: #57606f;
-  --text-color: #ced6e0;
-} */
-
-body {
-  font-family: 'Manrope', sans-serif;
-  /* color: var(--primary-text-color); */
-  /* background-color: var(--background-color); */
+:root {
+  --background-color: #ffffff;
+  --primary-text-color: #121417;
+  --secondary-text-color: #8a8a89;
+  --accent-color: #f4c550;
+  --secondary-color: #fbe9ba;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  src: url('/src/fonts/Roboto-Regular.ttf');
 }
 
-footer {
-  margin-top: auto;
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  src: url('/src/fonts/Roboto-Medium.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  src: url('/src/fonts/Roboto-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  src: url('/src/fonts/Roboto-Italic.ttf');
 }
 
 * {
@@ -60,36 +70,19 @@ img {
   height: auto;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+  color: var(--primary-text-color);
+  background-color: var(--background-color);
+}
+
 .container {
-  margin: 0 auto;
-  padding: 80px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
 }
 
-@media screen and (max-width: 374px) {
-  .container {
-    max-width: 374px;
-  }
-}
-
-@media screen and (min-width: 375px) {
-  .container {
-    /* padding: 80px 20px; */
-    width: 375px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  .container {
-    width: 768px;
-    /* padding-left: 32px;
-    padding-right: 32px; */
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .container {
-    width: 1280px;
-    /* padding-left: 20px;
-    padding-right: 20px; */
-  }
+footer {
+  margin-top: auto;
 }
