--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,6 @@ button {
 
 img {
   display: block;
-  max-width: 100%;
   height: auto;
 }
 
@@ -74,6 +73,8 @@ body {
   font-family: 'Roboto', sans-serif;
   color: var(--primary-text-color);
   background-color: var(--background-color);
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .container {
@@ -81,6 +82,9 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  max-width: 1440px;
+  padding: 0 64px;
+  margin: 0 auto;
 }
 
 footer {
