--- a/src/components/LoadData/LoadData.module.css
+++ b/src/components/LoadData/LoadData.module.css
@@ -10,5 +10,5 @@
   border-radius: 24px;
   padding: 24px;
   gap: 48px;
-  background-color: var(--background-color);
+  background-color: #f8f8f8;
 }
