--- a/src/components/TeachersCard/TeachersCard.module.css
+++ b/src/components/TeachersCard/TeachersCard.module.css
@@ -120,6 +120,36 @@
   gap: 32px;
 }
 
+.flexContainer {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 16px;
+}
+
+.teachersReviewImg {
+  border-radius: 50%;
+  height: 100%;
+}
+
+.flexReviewContainer {
+  margin-bottom: 2px;
+}
+
+.teachersReviewRating {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.28571;
+}
+
+.teachersReviewTitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--secondary-text-color);
+}
+
 .teachersLevelsList {
   display: flex;
   gap: 8px;
@@ -134,4 +164,20 @@
 .teachersLevelsItem:first-child {
   background-color: var(--accent-color);
   border: 0;
+}
+
+.teachersReviewStar {
+  margin-right: 8px;
+}
+
+.teachersTrialBtn {
+  margin-top: 32px;
+  border: 0;
+  border-radius: 12px;
+  padding: 16px 48px;
+  background-color: var(--accent-color);
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.55556;
 }
