--- a/src/components/LoadData/LoadData.module.css
+++ b/src/components/LoadData/LoadData.module.css
@@ -12,3 +12,19 @@
   gap: 48px;
   background-color: #f8f8f8;
 }
+
+.cardsLoadMoreBtn {
+  padding: 16px 48px;
+  background-color: var(--accent-color);
+  border: 0;
+  border-radius: 12px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.55556;
+  color: var(--primary-text-color);
+}
+
+.cardsLoadMoreBtn:hover,
+.cardsLoadMoreBtn:focus {
+  color: var(--background-color);
+}
