--- a/src/components/PopUp/PopUp.module.css
+++ b/src/components/PopUp/PopUp.module.css
@@ -15,13 +15,29 @@
 .popup {
   position: relative;
   padding: 64px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--background-color);
   border-radius: 30px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  max-width: 566px;
+  overflow-y: auto;
+  max-height: 90%;
 }
 
 .popup:hover {
   cursor: auto;
+}
+
+::-webkit-scrollbar {
+  background-color: var(--secondary-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--accent-color);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
