--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -42,6 +42,11 @@
   padding: 16px 88px;
 }
 
+.heroLink:hover,
+.heroLink:focus {
+  color: var(--background-color);
+}
+
 .heroList {
   display: flex;
   justify-content: space-between;
