--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,14 @@
+main {
+  min-width: 320px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .heroWrp {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-width: 320px;
   gap: 24px;
   margin-bottom: 24px;
 }
@@ -7,7 +16,7 @@
 .heroDesc {
   border-radius: 30px;
   background-color: #f8f8f8;
-  padding: 98px 102px 0 64px;
+  padding: 98px 108px 98px 64px;
 }
 
 .heroTitle {
@@ -16,6 +25,8 @@
   line-height: 1.16667;
   letter-spacing: -0.02em;
   margin-bottom: 32px;
+  max-width: 548px;
+  width: 100%;
 }
 
 .heroSmall {
@@ -33,13 +44,15 @@
 
 .heroLink {
   letter-spacing: -0.02em;
-  margin-bottom: 64px;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.55556;
   border-radius: 12px;
   background-color: var(--accent-color);
-  padding: 16px 88px;
+  padding: 20px 88px;
+  min-width: 268px;
+  margin-bottom: 64px;
+  white-space: nowrap;
 }
 
 .heroLink:hover,
@@ -47,18 +60,26 @@
   color: var(--background-color);
 }
 
+.heroImg {
+  max-width: 100%;
+}
+
 .heroList {
   display: flex;
-  justify-content: space-between;
-  padding: 40px 122px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  min-width: 320px;
+  padding: 40px 0;
   border-radius: 30px;
   border: 1.5px dashed var(--accent-color);
+  row-gap: 15px;
 }
 
 .heroItem {
   display: flex;
   align-items: center;
   gap: 16px;
+  min-width: 217px;
 }
 
 .heroTotal {
