--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,11 @@
 .footer {
-  padding: 40px 60px;
+  padding: 40px 0;
   font-weight: 700;
   line-height: 1.25;
+  margin: auto;
+  min-width: 448px;
+}
+
+.footerText {
+  text-align: center;
 }
