--- a/src/components/LoadData/LoadData.module.css
+++ b/src/components/LoadData/LoadData.module.css
@@ -1,12 +1,21 @@
 .cardsList {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  width: 100%;
+  row-gap: 32px;
   margin-bottom: 64px;
 }
 
 .cardsItem {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: start;
+  max-width: 1184px;
+  width: 100%;
   border-radius: 24px;
   padding: 24px;
   gap: 48px;
