--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  min-width: 320px;
   max-width: 1440px;
   padding: 0 64px;
   margin: 0 auto;
