--- a/src/pages/TeachersPage/TeachersPage.module.css
+++ b/src/pages/TeachersPage/TeachersPage.module.css
@@ -1,7 +1,9 @@
 .main {
-  min-width: 100%;
+  min-width: 320px;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 0 64px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
