--- a/src/pages/FavoritesPage/FavoritesPage.module.css
+++ b/src/pages/FavoritesPage/FavoritesPage.module.css
@@ -1,5 +1,7 @@
 .main {
-  min-width: 100%;
+  min-width: 320px;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 0 64px;
 }
 
@@ -11,12 +13,21 @@
 .cardsList {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  width: 100%;
+  row-gap: 32px;
   margin-bottom: 64px;
 }
 
 .cardsItem {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: start;
+  max-width: 1184px;
+  width: 100%;
   border-radius: 24px;
   padding: 24px;
   gap: 48px;
