--- a/src/components/TeachersCard/TeachersCard.module.css
+++ b/src/components/TeachersCard/TeachersCard.module.css
@@ -59,7 +59,6 @@
   display: flex;
   justify-content: space-between;
   align-items: start;
-  width: 100%;
   max-width: 697px;
 }
 
@@ -86,6 +85,9 @@
 }
 
 .teachersFavoriteBtn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   padding: 0;
   border: 0;
   background-color: transparent;
