--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,8 @@
   padding: 40px 0;
   font-weight: 700;
   line-height: 1.25;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   min-width: 448px;
 }
 
